--- a/public/css/header.css
+++ b/public/css/header.css
@@ -2,13 +2,13 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 10vh;
-    background-color: #E4E3DF;
+    gap: 3vh;
+    background-color: #0d1b2a;
     padding: 1rem;
     flex-wrap: wrap;
 }
 header img{
-    width: 15rem;
+    width: 12rem;
     border-radius: 50%;
 }
 header h1{
@@ -16,5 +16,6 @@ header h1{
     font-weight: 800;
     font-style: normal;
     font-size: 100px;
+    color: #e0e1dd;
     
 }
